Fix affix for safari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,78 +115,81 @@ a, a:hover {
 /* line 153, ../../sass/style.scss */
 .page-controls.affix md-toolbar {
   transition: background-color 0.2s linear;
+  background-color: #8BC34A;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
-/* line 157, ../../sass/style.scss */
+/* line 158, ../../sass/style.scss */
 .page-controls.affix md-toolbar .md-toolbar-tools {
+  transition: background-color 0.2s linear;
+  background-color: #8BC34A;
   padding-right: 17%;
 }
 @media (max-width: 767px) {
-  /* line 157, ../../sass/style.scss */
+  /* line 158, ../../sass/style.scss */
   .page-controls.affix md-toolbar .md-toolbar-tools {
     padding-right: 0;
   }
 }
-/* line 166, ../../sass/style.scss */
+/* line 169, ../../sass/style.scss */
 .page-controls.affix .page-size {
   display: none;
 }
-/* line 170, ../../sass/style.scss */
+/* line 173, ../../sass/style.scss */
 .page-controls.affix .page-navigation, .page-controls.affix .page-buttons md-icon {
   color: #F1F8E9;
 }
-/* line 175, ../../sass/style.scss */
+/* line 178, ../../sass/style.scss */
 .page-controls:not(.affix) {
   position: absolute;
 }
-/* line 178, ../../sass/style.scss */
+/* line 181, ../../sass/style.scss */
 .page-controls:not(.affix) md-toolbar {
   background-color: transparent;
 }
-/* line 184, ../../sass/style.scss */
+/* line 187, ../../sass/style.scss */
 .page-controls md-toolbar .md-toolbar-tools {
   padding: 0;
 }
-/* line 189, ../../sass/style.scss */
+/* line 192, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
   text-align: left;
   display: inline-block;
 }
-/* line 194, ../../sass/style.scss */
+/* line 197, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation {
   font-size: 14px;
   font-weight: 300;
   color: #616161;
 }
-/* line 201, ../../sass/style.scss */
+/* line 204, ../../sass/style.scss */
 .page-controls .page-size md-input-container {
   margin-top: 14px;
 }
-/* line 205, ../../sass/style.scss */
+/* line 208, ../../sass/style.scss */
 .page-controls .page-size span {
   position: relative;
   top: 1px;
 }
-/* line 211, ../../sass/style.scss */
+/* line 214, ../../sass/style.scss */
 .page-controls .page-navigation {
   min-width: 120px;
   text-align: right;
 }
 
-/* line 217, ../../sass/style.scss */
+/* line 220, ../../sass/style.scss */
 .product-table-container {
   margin-top: 64px;
   border-top: 1px solid #BDBDBD;
 }
 
-/* line 222, ../../sass/style.scss */
+/* line 225, ../../sass/style.scss */
 .product-table {
   margin: auto;
   width: 100%;
   text-align: left;
   font-weight: 300;
 }
-/* line 228, ../../sass/style.scss */
+/* line 231, ../../sass/style.scss */
 .product-table .product {
   background-color: transparent;
   transition: background-color 0.1s linear;
@@ -194,106 +197,106 @@ a, a:hover {
   border-bottom: 1px solid #EEEEEE;
 }
 @media (min-width: 1024px) {
-  /* line 228, ../../sass/style.scss */
+  /* line 231, ../../sass/style.scss */
   .product-table .product {
     padding-left: 100px;
     padding-right: 100px;
   }
 }
-/* line 241, ../../sass/style.scss */
+/* line 244, ../../sass/style.scss */
 .product-table .product:hover {
   background-color: #CCFF90;
 }
-/* line 245, ../../sass/style.scss */
+/* line 248, ../../sass/style.scss */
 .product-table .product .product-image {
   width: 64px;
   border-radius: 12px;
 }
 @media (max-width: 767px) {
-  /* line 245, ../../sass/style.scss */
+  /* line 248, ../../sass/style.scss */
   .product-table .product .product-image {
     width: 48px;
   }
 }
-/* line 263, ../../sass/style.scss */
+/* line 266, ../../sass/style.scss */
 .product-table .product .product-right {
   text-align: right;
 }
-/* line 267, ../../sass/style.scss */
+/* line 270, ../../sass/style.scss */
 .product-table .product .product-name {
   font-family: "Alegreya Sans SC", sans-serif;
   font-size: 24px;
   font-weight: 400;
 }
 @media (max-width: 767px) {
-  /* line 267, ../../sass/style.scss */
+  /* line 270, ../../sass/style.scss */
   .product-table .product .product-name {
     font-size: 18px;
   }
 }
-/* line 277, ../../sass/style.scss */
+/* line 280, ../../sass/style.scss */
 .product-table .product .product-volume {
   color: #616161;
 }
 @media (max-width: 767px) {
-  /* line 277, ../../sass/style.scss */
+  /* line 280, ../../sass/style.scss */
   .product-table .product .product-volume {
     font-size: 12px;
   }
 }
-/* line 285, ../../sass/style.scss */
+/* line 288, ../../sass/style.scss */
 .product-table .product .product-price {
   font-size: 32px;
   color: #212121;
 }
 @media (max-width: 767px) {
-  /* line 285, ../../sass/style.scss */
+  /* line 288, ../../sass/style.scss */
   .product-table .product .product-price {
     font-size: 24px;
   }
 }
-/* line 294, ../../sass/style.scss */
+/* line 297, ../../sass/style.scss */
 .product-table .product .product-saved-price {
   font-size: 12px;
   color: #64DD17;
 }
 @media (max-width: 767px) {
-  /* line 294, ../../sass/style.scss */
+  /* line 297, ../../sass/style.scss */
   .product-table .product .product-saved-price {
     font-size: 10px;
   }
 }
-/* line 304, ../../sass/style.scss */
+/* line 307, ../../sass/style.scss */
 .product-table .product .product-original-price {
   font-size: 12px;
   color: #616161;
 }
 @media (max-width: 767px) {
-  /* line 304, ../../sass/style.scss */
+  /* line 307, ../../sass/style.scss */
   .product-table .product .product-original-price {
     font-size: 10px;
   }
 }
 
-/* line 316, ../../sass/style.scss */
+/* line 319, ../../sass/style.scss */
 .footer {
   height: 50px;
   position: relative;
   background-color: #689F38;
   color: #F1F8E9;
 }
-/* line 322, ../../sass/style.scss */
+/* line 325, ../../sass/style.scss */
 .footer .footer-disclaimer {
   margin: auto;
   text-align: center;
   font-size: 10px;
-  width: 50%;
+  width: 90%;
   position: relative;
   transform: translateY(-50%);
   top: 50%;
 }
 @media (max-width: 767px) {
-  /* line 322, ../../sass/style.scss */
+  /* line 325, ../../sass/style.scss */
   .footer .footer-disclaimer {
     width: 100%;
     font-size: 8px;
