--- a/sass/style.scss
+++ b/sass/style.scss
@@ -152,9 +152,12 @@ a,a:hover {
 
     md-toolbar {
       transition: background-color 0.2s linear;
+      background-color: $light-green-500;
       box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
 
       .md-toolbar-tools {
+        transition: background-color 0.2s linear;
+        background-color: $light-green-500;
         padding-right: 17%;
 
         @include small {
@@ -323,7 +326,7 @@ a,a:hover {
     margin: auto;
     text-align: center;
     font-size: 10px;
-    width: 50%;
+    width: 90%;
     position: relative;
     transform: translateY(-50%);
     top: 50%;
