--- a/sass/style.scss
+++ b/sass/style.scss
@@ -151,13 +151,11 @@ a,a:hover {
     width: 100%;
 
     md-toolbar {
-      transition: background-color 0.2s linear;
-      background-color: $light-green-500;
       box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
 
       .md-toolbar-tools {
         transition: background-color 0.2s linear;
-        background-color: $light-green-500;
+        background-color: black;//$light-green-500;
         padding-right: 17%;
 
         @include small {
